<?xml version="1.0"?>
<package>
    <name>moveit_config</name>
    <version>1.0.0</version>
    <description>Physx simulation project moveit config</description>
    <maintainer email="sapien@ucsd.edu"></maintainer>
    <author>sapien</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>
    <export>
    </export>
</package>
