<?xml version="1.0"?>
<package>
        <name>movo_description</name>
            <version>1.0.0</version>
                <description>Drivers and nodes related to Movo Plaform</description>
                    <maintainer email="ros@kinovarobotics.com">Martine Blouin</maintainer>
                        <author></author>
                            <url type="repository">https://github.com/Kinovarobotics</url>
                                <license>BSD</license>

                                    <buildtool_depend>catkin</buildtool_depend>

                                        <build_depend>roslaunch</build_depend>
                                            <run_depend>robot_state_publisher</run_depend>
                                                <run_depend>urdf</run_depend>
                                                    <run_depend>xacro</run_depend>
                                                        <run_depend>gazebo_plugins</run_depend>
                                                            <run_depend>gazebo_ros</run_depend>
                                                                <run_depend>gazebo_ros_control</run_depend>
                                                                    <run_depend>hector_gazebo_plugins</run_depend>


                                                                        <export>
                                                                                </export>
                                                                            </package>
